[package]
name = "glove80-firmware-updater"
version = "0.1.1"
edition = "2021"
license = "BSD-2-Clause"
description = "A tool for updating the firmware on the Glove80 keyboard"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.7", features = ["cargo", "derive" ] }
spinoff = "0.8.0"
sysinfo = "0.31.4"

[target.'cfg(target_os = "linux")'.dependencies]
sys-mount = "3.0.1"
elevate = "0.6.1"
